--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -72,6 +72,7 @@ a {
 .badge-Rejected {
   color: #fff;
   background-color: #e74a3b;
+  border-color: #e74a3b;
 }
 
 .border-left-Rejected {
@@ -85,6 +86,7 @@ a {
 .badge-Shortlisted {
   color: #fff;
   background-color: #1cc88a;
+  border-color: #1cc88a;
 }
 
 .text-Shortlisted {
@@ -98,6 +100,7 @@ a {
 .badge-Waiting {
   color: #fff;
   background-color: #4e73df;
+  border-color: #4e73df;
 }
 
 .border-left-Waiting {
