created function to create job board

--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -69,10 +69,16 @@ a {
   transition: .2s all ease-in-out;
 }
 
+.status .badge {
+  color: #fff;
+  background-color: $cyan;
+  border-color: $cyan;
+}
+
 .badge-Rejected {
   color: #fff;
-  background-color: #e74a3b;
-  border-color: #e74a3b;
+  background-color: #e74a3b!important;
+  border-color: #e74a3b!important;
 }
 
 .border-left-Rejected {
@@ -85,8 +91,8 @@ a {
 
 .badge-Shortlisted {
   color: #fff;
-  background-color: #1cc88a;
-  border-color: #1cc88a;
+  background-color: #1cc88a!important;
+  border-color: #1cc88a!important;
 }
 
 .text-Shortlisted {
@@ -99,8 +105,8 @@ a {
 
 .badge-Waiting {
   color: #fff;
-  background-color: #4e73df;
-  border-color: #4e73df;
+  background-color: #4e73df!important;
+  border-color: #4e73df!important;
 }
 
 .border-left-Waiting {
